<resources>
    <string name="app_name" translatable="false">AmazModService</string>
    <string name="launcher_name" translatable="false">AmazModLauncher</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_notification" translatable="false">NotificationActivity</string>
    <string name="last_charge">Since full charge</string>
    <string name="last_charge_no_info">Waiting for full charge</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="close_button">Close&#160;&#160;&#160;</string>
    <string name="send_button">&#160;&#160;&#160;Send</string>
    <string name="sending_3sec">Sending in 3s…</string>
    <string name="keyboard" translatable="false">⌨️</string>
    <string name="hint">Type reply here</string>
    <string name="load_apps">Load Apps</string>
    <string name="hint_apps">Tap button to show installed apps</string>
    <string name="hint_type">Type here</string>
    <string name="user_apps">User Apps</string>
    <string name="empty">Empty</string>
    <string name="clear_data">Clear Data</string>
    <string name="uninstall">Uninstall</string>
    <string name="quick_launch">Quick Launch</string>
    <string name="quick_launch_description">App can be launched from watchface screen using bottom button (long press)!</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="install_app">Install App</string>
    <string name="delete">Delete</string>
    <string name="confirmation">Are you sure?</string>
    <string name="input_methods">Input Methods</string>
    <string name="root">Internal Storage</string>
    <string name="go_up">Go up</string>
    <string name="phone_disconnected">Phone disconnected</string>
    <string name="phone_connected">Phone connected</string>
    <string name="phone_connection_alert">Connection Alert</string>
    <string name="phone_battery_alert">Phone Battery Alert</string>
    <string name="watch_battery_alert">Watch Battery Alert</string>
    <string name="device_owner">Please enable Device Admin as instructed</string>
    <!-- Strings used by AdminReceiver start -->
    <string name="device_admin">Device Admin</string>
    <string name="device_admin_description">Grant lock screen access</string>
    <string name="admin_receiver_status">AmazMod Device Admin: %1$s</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="admin_receiver_status_disable_warning">AmazMod will not be able to lock screen after closing replies.</string>
    <string name="revoke_device_admin_before_uninstall">Please first revoke \"Device Admin\" before uninstalling AmazMod</string>
    <!-- Strings used by AdminReceiver end -->
    <string name="silence_application">MUTE</string>
    <string name="notifications">Notifications</string>
    <string name="clear_notifications">Clear All</string>
    <string name="unknown">Unknown</string>
    <string name="saved">Saved</string>
    <string name="default_icon" />
    <string name="error_loading">Unable to load springboard pages. Please try opening the Amazfit app on your phone, rearranging and enabling/disabling widget pages in the settings, then tap to reload</string>
    <string name="tap_to_cancel">TAP TO CANCEL</string>
    <string name="watch_battery">Watch\'s battery is under %s</string>
    <string name="phone_battery">Phones\'s battery is under %s</string>
    <string name="wifi_connected_to">Wi-Fi Connected to:</string>
    <string name="wifi_connected">Wi-Fi connected</string>
    <string name="wifi_disconnected">Wi-Fi disconnected</string>
    <string name="true_">true</string>
    <string name="false_">false</string>
    <string name="updated">Updated</string>
    <string name="low_power">lowPower</string>
    <string name="restart_needed">Watch will restart to apply changes ;)</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="killing_background_process">Killing background processes…</string>
    <string name="uninstalled_successfully">uninstalled successfully!</string>
    <string name="list_cleared">List Cleared</string>
    <string name="keep_awake_disabled">KeepAwake: Disabled</string>
    <string name="keep_awake_enabled">KeepAwake: Enabled</string>
    <string name="keep_awake_dim_enabled">KeepAwake (Dim): Enabled</string>
    <string name="keep_awake_screen_on_enabled">KeepAwake (ScreenOn): Enabled</string>
    <string name="reloading_apps">Reloading Apps…</string>
    <string name="list_saved">List Saved</string>
    <string name="opening">Opening:</string>
    <string name="hidden">hidden!</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="screen_setting_summary">Changing Font Size will restart watch</string>
    <string name="density">Density:</string>
    <string name="font">Font:</string>
    <string name="inverted">Inverted:</string>
    <string name="save">Save</string>
    <string name="minutes">minutes</string>
    <string name="one_day">One Day</string>
    <string name="block_app">BLOCK APP</string>
    <string name="tap_to_close">Tap to Close</string>
    <string name="please_wait">Please wait…</string>
    <string name="continuing_in">Continuing in</string>
    <string name="restarting_in">Restarting in</string>
    <string name="please_wait_may_take_a_while">Please wait, it may take a while…</string>
    <string name="up_time">Uptime:</string>
    <string name="sleep_time">SleepTime:</string>
    <string name="free_ram">Free RAM:</string>
    <string name="not_connected">not connected</string>
    <string name="proceeding_in_3s">Proceeding in 3s…</string>
    <string name="last_20_values">Last 20 Values [%sd]</string>
    <string name="close_list">[Close List]</string>
    <string name="battery">Battery</string>
    <string name="no_battery_data">No Battery data yet…</string>
    <string name="waiting_battery_data">Waiting for battery data…</string>
    <string name="fully_charged">Fully Charged</string>
    <string name="charged_in">Charged in</string>
    <string name="remaining">Remaining</string>
    <string name="amazmod_updated">AmazMod Updated</string>
    <string name="install_finished">Install Finished</string>
    <string name="installing_apk">Installing APK</string>
    <string name="removing">REMOVING</string>
    <string name="muting">MUTING</string>
    <string name="sending_reply">SENDING REPLY</string>
    <string name="deleted">Deleted</string>
    <string name="muted">Muted</string>
    <string name="reply_sent">Reply Sent</string>
    <string name="free_space">Free space</string>
    <string name="no_app_found">No app found to handle</string>
    <string name="please_wait_installation">Please wait until installation finishes…</string>
    <string name="error_deleting">Error deleting</string>
    <string name="low_power_mode_warning">Are you sure? Low Power Mode (LPM) disables Bluetooth and touchscreen until the watch is restarted (press and hold power button) or battery goes below 5% and watch is charged again.</string>
    <string name="reload_items">Reload items</string>
    <string name="clear_all_items">Clear all items</string>
    <string name="save_order">Save order</string>
    <string name="widgets">Widgets</string>
    <string name="clear_saved_order">Clear Saved Order</string>
    <string name="write_settings_permission_required">Write Settings Permission Required!</string>
    <string name="five_day">5 day(s)</string>
    <string name="content">Content</string>
    <string name="button">Button</string>
    <string name="changing_font_warning">Changing Font Size will restart watch</string>
    <string name="notification_time">Notification Time</string>
    <string name="continuing_in_3sec">Continuing in 3s…</string>
    <string name="user_files">User Files</string>
    <string name="apps">Apps</string>
    <string name="five_minutes">5 minutes</string>
    <string name="tap_button_to_cancel">Tap button to cancel</string>
    <string name="list_items">List Items</string>
    <string name="restarting_in_3sec">Restarting in 3s…</string>
    <string name="package_name">Package Name</string>
    <string name="title">Title</string>
    <string name="sending">Sending</string>
    <string name="hourly_chime">Hourly Chime</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
    <string name="reload_apps">Reload apps</string>
    <string name="reload_files">Reload files</string>
    <string name="clear_saved">Clear Saved</string>
    <string name="service_update">Service Update</string>
    <string name="file_manager">File Manager</string>
    <string name="app_manager">App Manager</string>
    <string name="not_found">not found!</string>
    <string name="action_undefined">No action defined</string>
    <string name="activity_menu_apps_mamager">Apps Manager</string>
    <string name="activity_menu_files_mamager">Files Manager</string>
    <string name="activity_menu_reorder_widgets">Reorder Widgets</string>
    <string name="activity_menu_screen_settings">Screen Settings</string>
    <string name="activity_menu_battery_graph">Battery Graph</string>
    <string name="activity_menu_wifi_toggle">Toggle Wifi</string>
    <string name="activity_menu_wifi_panel">Wifi Panel</string>
    <string name="activity_menu_flashlight">Flashlight</string>
    <string name="activity_menu_qrcode">QR Code</string>
    <string name="activity_menu_clean_memory">Clean Memory</string>
    <string name="activity_menu_lpm">Enable Low Power Mode</string>
    <string name="activity_menu_revoke_admin">Revoke Device Admin Permission</string>
    <string name="activity_menu_grant_admin">Grant Device Admin Permission</string>
    <string name="activity_menu_restart_launcher">Restart Launcher</string>
    <string name="activity_menu_clear_launcher">Clear Launcher Settings</string>
    <string name="activity_menu_reboot">Reboot</string>
    <string name="activity_menu_reboot_recovery">Reboot to Recovery</string>
    <string name="activity_menu_reboot_fastboot">Reboot to Fastboot</string>
    <string name="activity_menu_units">Units</string>
    <string name="activity_menu_anti_lost">Disconnect Alert (iOS)</string>
    <string name="activity_menu_away_alert">Away Alert (iOS)</string>
    <string name="activity_menu_screenon">Notification ScreenOn</string>
    <string name="activity_menu_input_method">Change Input Method</string>
    <string name="activity_menu_device_info">Device Info</string>
    <string name="activity_menu_hourly_chime">Hourly Chime</string>
    <string name="uvindex_weakest">Weakest</string>
    <string name="uvindex_weak">Weak</string>
    <string name="uvindex_moderate">Moderate</string>
    <string name="uvindex_strong">Strong</string>
    <string name="uvindex_verystrong">Very strong</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_snooze">Snooze</string>
    <string name="alarm_dismiss">Dismiss</string>
    <string name="camera_delay">Delay</string>
    <string name="camera_shutter">Camera Shutter</string>
</resources>
