<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".sleep.alarm.alarmActivity">

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/alarm_snooze"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:background="@drawable/alarm_button_snooze"
        android:text="@string/alarm_snooze"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_time" />

    <Button
        android:id="@+id/alarm_dismiss"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:background="@drawable/alarm_button_dismiss"
        android:text="@string/alarm_dismiss"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_time" />

    <TextView
        android:id="@+id/alarm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textColor="#ff8c00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_time" />
</androidx.constraintlayout.widget.ConstraintLayout>